cod-tools (unreleased)

  * Added:
    - the 'cif_automorphism' script.
    - COD::AtomNeighbours:
      - the neighbour_list_from_cif() subroutine.
    - COD::CIF::Data::AtomList:
      - updated the atom property extraction logic to determine atom
        oxidation states from atom chemical types and atom names.
    - cif_sort_atoms:
      - the '--ascending-numerically', '--descending-numerically',
        '--ascending-string', '--descending-string' options.
  * Changed:
    - cif_validate:
      - the format of validation messages describing composite key
        uniqueness violations. 
    - COD::CIF::DDL::DDLm::Validate:
      - the format of validation messages describing composite key
        uniqueness violations. 
  * Fixed:
    - codcif:
      - preserving empty save frames.
    - cif_compare_dics:
      - started using the UserMessage::sprint_message() subroutine
        to output dictionary comparison results in order to correctly
        escape symbols forbidden by the error message syntax.
    - cif_sort_atoms:
      - taking value of '_atom_site_type_symbol' when sorting atoms by
        their atomic numbers.
    - COD::CIF::DDL::DDLm::Validate:
      - replaced '\d' with '[0-9]' in several regular expressions.

cod-tools (3.0.1)

  * Added:
    - dependencies for Fedora 32.
  * Fixed:
    - dic2markdown:
      - updated the script to properly process DDLm dictionary save frames
        that do not contain an explicit definition class.
  * Removed:
    - dependencies:
      - Carp::Assert as a run and build dependency.

cod-tools (3.0.0)

  * Changed:
    - cif2cod:
      - header with field names is printed by default for CSV output format.
    - cif2xyz:
      - proper XYZ format with a header is produced by default.
    - cif_fix_values:
      - CIF dictionary handling interface has been changed to match the interface
        of the cif_validate script. The '--dictionaries' option has been replaced