@@ -1,0 +1,7 @@
+#!/bin/sh
+
+if ! perl -MChemistry::OpenSMILES -e '1' 2>/dev/null
+then
+    echo Test skipped - no Chemistry::OpenSMILES
+    exit 1
+fi
