@@ -3,6 +3,7 @@ cod-tools (unreleased)
   * Added:
     - the 'cif_automorphism' script.
     - COD::AtomNeighbours:
+      - the neighbour_list_from_chemistry_opensmiles() subroutine;
       - the neighbour_list_from_cif() subroutine.
     - COD::CIF::Data::AtomList:
       - updated the atom property extraction logic to determine atom
